[package]
name = "lebn-xyz"
version = "0.1.0"
authors = ["lebn.xyz <shu.fi.ma.fi@lebn.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.1"
juniper = "0.14.2"
tokio = { version = "0.2.13", features = ["macros"] }
sauron = "0.22.2"
